--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ img {
   width: 100%;
 }
 
+.header .logo {
+  margin-left: 338px;
+}
+
 .header ul {
   display: flex;
   margin-right: 60px;
@@ -44,6 +48,119 @@ img {
   line-height: 64px;
 }
 
-.header .logo {
-  margin-right: auto;
+/* container */
+.container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+/* slide */
+.slide_container {
+  height: 600px;
+  background: url('../images/bg_01.png') no-repeat;
+  background-position: right;
+  background-color: #f5f5f5;
+  display: flex;
+}
+
+.container .slide {
+  display: flex;
+  height: 600px;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.slide_container h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-top: 162px;
+}
+
+.slide_container p {
+  padding: 0 50px 0;
+  line-height: 1.6;
+}
+
+.slide_btn {
+  display: block;
+  width: 168px;
+  height: 46px;
+  background: #111111;
+  line-height: 46px;
+  color: #fff;
+  text-align: center;
+  border-radius: 55px;
+}
+
+/* section_01 */
+.blog {
+  display: flex;
+  justify-content: space-between;
+  margin: 140px 0 100px 0;
+  line-height: 1.4;
+}
+
+.blog li {
+  width: 560px;
+  height: 320px;
+  background: #f0f5f9;
+  padding: 40px;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.blog li h4 {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.blog li p {
+  margin: 16px 0 30px 0;
+  font-size: 18px;
+  color: #666;
+}
+
+.blog li p a {
+  font-size: 14px;
+}
+
+.sec_01_btn {
+  display: block;
+  width: 168px;
+  height: 46px;
+  background: #fff;
+  line-height: 46px;
+  color: #000;
+  text-align: center;
+  border-radius: 55px;
+}
+
+/* section_02 */
+.sec_02 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 48px 0 72px;
+}
+
+.sec_02 .container h4 {
+  font-size: 36px;
+  font-weight: 700;
+  padding-bottom: 32px;
+}
+
+.sec_02 .container p {
+  color: #666;
+}
+
+.sec_02 .series {
+  display: flex;
+  background: #f5f5f5;
+  width: 260px;
+  height: 260px;
+}
+
+.sec_01 .series div {
+  margin: 0 20px;
 }
