--- a/css/main.css
+++ b/css/main.css
@@ -34,23 +34,21 @@ img {
 
 .header .logo {
   margin-right: auto;
-  padding-left: 380px;
+  margin-left: 350px;
 }
 
 .header ul {
   display: flex;
-  margin-right: 60px;
-  padding-right: 380px;
+  margin-right: 380px;
 }
 
 .header ul li a {
   display: block;
   padding: 0 18px;
-  height: 64px;
   line-height: 64px;
 }
 
-.header .btn {
+.header .btn a {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -156,9 +154,9 @@ img {
 /* section_02 */
 .sec_02 .container {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   padding: 48px 0 72px;
 }
 
@@ -173,12 +171,12 @@ img {
   padding-bottom: 66px;
 }
 
-.itmes {
+.items {
   display: flex;
   justify-content: space-between;
 }
 
-.itmes li {
+.items li {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -241,27 +239,33 @@ img {
   padding-top: 140px;
 }
 
-.sec_04 .series .itmes {
+.sec_04 .series .items {
   display: flex;
   justify-content: space-between;
 }
 
 /* section_05 */
-.sec_05 .container .itmes {
+.sec_05 .container {
   display: flex;
+  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  padding: 48px 0 72px;
+}
+
+.sec_05 .container .items {
+  display: flex;
   width: 360px;
   height: 360px;
-  background: red;
   border-radius: 30px;
 }
 
-.sec_05 .itmes {
+.sec_05 .items .photo {
   display: flex;
   justify-content: space-between;
 }
 
-.itmes li {
+.items li {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -270,7 +274,7 @@ img {
   margin-bottom: 160px;
 }
 
-.sec_05 .series div {
+.sec_05 .photo div {
   margin: 0 20px;
 }
 
